[tool.poetry]
name = "expense-tracker"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "expense_tracker"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
rich = "^13.4.2"
pysqlite3 = "^0.5.1"
pyexiftool = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
