[tool.poetry]
name = "expense-tracker"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "expense_tracker"}]

[tool.poetry.scripts]
exptrack = "expense_tracker.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
pysqlite3 = "^0.5.1"
configparser = "^5.3.0"
sqlalchemy = "^2.0.18"
exif = "^1.6.0"
geopy = "^2.3.0"
textual = "^0.32.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"
textual-dev = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
